Archive2/be/19f1c81dce55f5/main.cpp
#include <cstdio>

template<int z>
struct s
{
    enum{e = (z%3==0) ? s<z/3>::e : (z==1 ? 1 : 0)};
};

int main(){
    printf("%d\n",s<91>::e);
    return 0;
};